# SpurHacks

./: .gitignore  AI_AGENT_INTEGRATION.md  BUG_RESOLUTION.md  IMPLEMENTATION_STATUS.md  MANIM_GUIDE.md  QUIZ_FEATURE.md  README.md  TAVUS_PORTAL_SETUP.md  TAVUS_SETUP.md
backend/: .env.example  .gitignore  README.md  auto_curl.sh  check_tavus_status.py  main.py  manim_examples.py  pyproject.toml  run.sh  run_production.py  test_actual_conversation.py  test_create_conversation.py  test_custom_greeting.py  test_final_script_change.py  test_multiple_scripts.py  test_quiz_generation.py  test_specific_script.py
backend/instance/: app.db
backend/manim_gens/: manim_script_20250621_224818_2fabe5dd.py  manim_script_20250621_225523_2fabe5dd.py  manim_script_20250621_230213_2fc12f5b.py  manim_script_20250621_231002_780f152c.py  manim_script_20250621_231420_d15e2fe9.py  manim_script_20250621_232957_ef3283a7.py  manim_script_20250622_003042_c9a61c15.py  manim_script_20250622_010013_4cb909de.py  manim_script_20250622_010500_4cb909de.py  manim_script_20250622_011308_0ce5b0a0.py  presentation_20250622_022748_6e49ec4d.py  presentation_20250622_022908_5f83597e.py  presentation_20250622_023112_2c5e49e5.py  presentation_20250622_023301_9cefdd26.py  presentation_20250622_023550_9546180d.py  presentation_20250622_023834_e8fd4131.py  presentation_20250622_025520_e86578c7.py  presentation_20250622_025949_af700771.py  presentation_20250622_030454_ef4f88b7.py  presentation_20250622_030728_2bd747dd.py  presentation_20250622_031035_e3528c28.py  presentation_20250622_031708_01139ecf.py  (+44 more)
(+30 files in other folders)
