[project]
name = "backend"
version = "0.1.0"
description = "Flask backend with RESTful APIs for user authentication"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-bcrypt",
    "flask-jwt-extended",
    "flask-cors",
    "manim",
    "google-generativeai",
    "gtts",
    "pydub",
    "moviepy",
    "librosa",
    "soundfile",
    "numpy",
    "scipy",
    "anthropic>=0.54.0",
    "pyproject-toml>=0.1.0",
    "flask-socketio>=5.5.1",
]
